--- a/graphviz-example/graphviz-example.cabal
+++ b/graphviz-example/graphviz-example.cabal
@@ -1,4 +1,4 @@
-name:                e
+name:                graphviz-example
 version:             0.1.0.0
 synopsis:            book/web/blog infrastructure for now
 description:         see README
@@ -12,13 +12,15 @@ build-type:          Simple
 -- extra-source-files:
 cabal-version:       >=1.10
 
--- library
---  hs-source-dirs:      src
---  exposed-modules:     Lib
---  build-depends:       base >= 4.7 && < 5
---  default-language:    Haskell2010
+library
+  hs-source-dirs:      src
+  exposed-modules:     WriteRunDot
+  build-depends:       base
+                     , filepath
+                     , graphviz
+  default-language:    Haskell2010
 
-executable e-exe
+executable graphviz-example
   hs-source-dirs:      src
   main-is:             graphviz.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
@@ -29,6 +31,7 @@ executable e-exe
                      , haskell-src
                      , syb
                      , text
+  other-modules:       WriteRunDot
   default-language:    Haskell2010
 
 -- test-suite simple-test
