--- a/content/graphviz-example/Makefile
+++ b/content/graphviz-example/Makefile
@@ -1,10 +1,10 @@
 #
 # Created       : 2015 Oct 28 (Wed) 17:42:11 by Harold Carr.
-# Last Modified : 2015 Nov 28 (Sat) 15:02:00 by Harold Carr.
+# Last Modified : 2015 Nov 28 (Sat) 15:36:00 by Harold Carr.
 #
 
 G                   = .generated
-INFRA               = ../infrastructure/.stack-work/install/x86_64-osx/lts-3.7/7.10.2/bin/infra
+INFRA               = ../../infrastructure/.stack-work/install/x86_64-osx/lts-3.7/7.10.2/bin/infra
 GRAPHVIZ_EXECUTABLE = .stack-work/install/x86_64-osx/lts-3.15/7.10.2/bin/graphviz-example
 
 all : $(G)/graphviz.hs.org $(G)/ex1.png $(G)/ex3-dot.png $(G)/graphviz.html
