--- a/content/practical_recursion_schemes/PRS.cabal
+++ b/content/practical_recursion_schemes/PRS.cabal
@@ -14,6 +14,7 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 library
+  hs-source-dirs:      src
   exposed-modules:     PRS
   build-depends:       base
                      , data-ordlist
