Combine libraries into one.

--- a/content/practical_recursion_schemes/Makefile
+++ b/content/practical_recursion_schemes/Makefile
@@ -1,12 +1,12 @@
 #
 # Created       : 2015 Oct 28 (Wed) 17:42:11 by Harold Carr.
-# Last Modified : 2015 Nov 28 (Sat) 16:15:41 by Harold Carr.
+# Last Modified : 2015 Dec 02 (Wed) 11:54:00 by Harold Carr.
 #
 
 G                   = .generated
 INFRA               = ../../infrastructure/.stack-work/install/x86_64-osx/lts-3.7/7.10.2/bin/infra
 
-all : $(G)/PRS.hs.org $(G)/PRS.html
+all : $(G)/PRS.hs.org $(G)/PRS.html pdf html
 
 # hs_to_org
 $(G)/PRS.hs.org : src/PRS.hs
@@ -19,6 +19,12 @@ $(G)/PRS.html : src/PRS.org
 
 $(GRAPHVIZ_EXECUTABLE) : src/PRS.hs
 	stack build
+
+pdf:
+	cd src; pandoc    -t beamer --template tim.beamer -o ../$(G)/RS.pdf   -V theme:tim RS.lhs
+
+html:
+	cd src; pandoc -s                                 -o ../$(G)/RS.html               RS.lhs
 
 clean :
 	stack clean
