--- a/content/practical_recursion_schemes/stack.yaml
+++ b/content/practical_recursion_schemes/stack.yaml
@@ -1,5 +1,6 @@
 flags: {}
 packages:
 - '.'
-extra-deps: [recursion-schemes-4.1.2]
+- '../../../test-hunit-util'
+extra-deps: [ hashable-1.2.3.3, recursion-schemes-4.1.2 ]
 resolver: lts-3.15
