--- a/content/recursion-schemes/Makefile
+++ b/content/recursion-schemes/Makefile
@@ -1,6 +1,6 @@
 #
 # Created       : 2015 Oct 28 (Wed) 17:42:11 by Harold Carr.
-# Last Modified : 2015 Dec 14 (Mon) 18:54:44 by Harold Carr.
+# Last Modified : 2015 Dec 22 (Tue) 09:47:40 by Harold Carr.
 #
 
 G                   = .generated
@@ -8,11 +8,12 @@ G                   = .generated
 all : pdf html
 
 pdf:
-	cd src; pandoc      -t beamer --template tim.beamer \
-                      -o ../$(G)/RS.pdf   -V theme:tim RS.lhs
+	cd src; pandoc RS.lhs -o ../$(G)/RS.pdf \
+                        -V theme:tim -t beamer --template tim.beamer
 
 html:
-	cd src; pandoc -s   -o ../$(G)/RS.html               RS.lhs
+	cd src; pandoc RS.lhs -o ../$(G)/RS.html \
+                        -s
 
 clean :
 	stack clean
