--- a/content/recursion-schemes/stack.yaml
+++ b/content/recursion-schemes/stack.yaml
@@ -2,5 +2,5 @@ flags: {}
 packages:
 - '.'
 - '../../../test-hunit-util'
-extra-deps: [ hashable-1.2.3.3, recursion-schemes-4.1.2 ]
+extra-deps: [ recursion-schemes-4.1.2 ]
 resolver: lts-5.13
