--- a/content/recursion-schemes/Makefile
+++ b/content/recursion-schemes/Makefile
@@ -1,18 +1,24 @@
 #
 # Created       : 2015 Oct 28 (Wed) 17:42:11 by Harold Carr.
-# Last Modified : 2016 Apr 20 (Wed) 11:57:54 by Harold Carr.
+# Last Modified : 2017 Apr 09 (Sun) 15:01:13 by Harold Carr.
 #
 
 G                   = .generated
 
-all : pdf html
+all : pdf1 pdf2 html
 
-pdf:
+pdf1:
 	cd src; pandoc RS.lhs -o ../$(G)/RS.pdf \
+                        -V theme:tim -t beamer --template tim.beamer
+
+pdf2:
+	cd src; pandoc RSL17.lhs -o ../$(G)/RSL17.pdf \
                         -V theme:tim -t beamer --template tim.beamer
 
 html:
 	cd src; pandoc RS.lhs -o ../$(G)/RS.html \
+                        -s
+	cd src; pandoc RSL17.lhs -o ../$(G)/RSL17.html \
                         -s
 
 clean :
