--- a/content/recursion-schemes/Makefile
+++ b/content/recursion-schemes/Makefile
@@ -1,6 +1,6 @@
 #
 # Created       : 2015 Oct 28 (Wed) 17:42:11 by Harold Carr.
-# Last Modified : 2017 Apr 17 (Mon) 16:57:32 by Harold Carr.
+# Last Modified : 2017 Apr 17 (Mon) 17:14:56 by Harold Carr.
 #
 
 G                   = .generated
@@ -13,6 +13,7 @@ pdf:
 
 pdf17:
 	cd src; pandoc RSL17.lhs -o ../$(G)/RSL17.pdf \
+                        --variable fontsize=14pt \
                         -V theme:tim -t beamer --template tim.beamer
 
 html:
