hylo / fusion-deforestation

--- a/content/recursion-schemes/RS.cabal
+++ b/content/recursion-schemes/RS.cabal
@@ -13,7 +13,7 @@ library
                      , Apo
                      , Cata
                      , CtxF
-                     , Explicit
+                     , ExplicitAndFold
                      , ExprF
                      , Fixpoint
                      , Foldable
