--- a/content/recursion-schemes/Makefile
+++ b/content/recursion-schemes/Makefile
@@ -1,6 +1,6 @@
 #
 # Created       : 2015 Oct 28 (Wed) 17:42:11 by Harold Carr.
-# Last Modified : 2017 Apr 17 (Mon) 17:14:56 by Harold Carr.
+# Last Modified : 2017 May 27 (Sat) 09:54:13 by Harold Carr.
 #
 
 G                   = .generated
@@ -21,6 +21,9 @@ html:
                         -s
 	cd src; pandoc RSL17.lhs -o ../$(G)/RSL17.html \
                         -s
+
+copy:
+	cp $(G)/RSL17.pdf /Users/carr/.sync/.esync/openhc/presentations/2017-05-27-lambdaconf-recursion-schemes.pdf
 
 clean :
 	stack clean --full
