--- a/content/recursion-schemes/Makefile
+++ b/content/recursion-schemes/Makefile
@@ -1,6 +1,6 @@
 #
 # Created       : 2015 Oct 28 (Wed) 17:42:11 by Harold Carr.
-# Last Modified : 2017 May 27 (Sat) 09:54:13 by Harold Carr.
+# Last Modified : 2017 Jun 11 (Sun) 11:42:40 by Harold Carr.
 #
 
 G                   = .generated
@@ -8,22 +8,32 @@ G                   = .generated
 all : pdf pdf17 html
 
 pdf:
-	cd src; pandoc RS.lhs -o ../$(G)/RS.pdf \
-                        -V theme:tim -t beamer --template tim.beamer
+	cd src; pandoc RS.lhs \
+                       -o ../$(G)/RS.pdf \
+                       -V theme:tim \
+                       -t beamer \
+                       --template tim.beamer
 
 pdf17:
-	cd src; pandoc RSL17.lhs -o ../$(G)/RSL17.pdf \
-                        --variable fontsize=14pt \
-                        -V theme:tim -t beamer --template tim.beamer
+	cd src; pandoc RSL17.lhs \
+                       -o ../$(G)/RSL17.pdf \
+                       --variable fontsize=14pt \
+                       -V theme:tim \
+                       -t beamer \
+                       --template tim.beamer
 
 html:
-	cd src; pandoc RS.lhs -o ../$(G)/RS.html \
-                        -s
-	cd src; pandoc RSL17.lhs -o ../$(G)/RSL17.html \
-                        -s
+	cd src; pandoc RS.lhs \
+                       -o ../$(G)/RS.html \
+                       -s
+	cd src; pandoc RSL17.lhs \
+                       -o ../$(G)/RSL17.html \
+                       -s
 
-copy:
-	cp $(G)/RSL17.pdf /Users/carr/.sync/.esync/openhc/presentations/2017-05-27-lambdaconf-recursion-schemes.pdf
+md:
+	cd src; pandoc RSL17.lhs \
+                       -o ../$(G)/RSL17.md \
+                       -s
 
 clean :
 	stack clean --full
